--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router": "5.0.0",
     "react-router-dom": "5.0.0",
     "react-scripts": "3.0.1",
+    "react-tradingview-widget": "^1.3.2",
     "react-twitter-embed": "^2.0.8",
     "reactstrap": "8.0.0"
   },
