--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "5.0.0",
     "react-scripts": "3.0.1",
     "react-twitter-embed": "^2.0.8",
+    "react-vis": "^1.11.7",
     "reactstrap": "8.0.0"
   },
   "scripts": {
